added service for stories

--- a/app/index.html
+++ b/app/index.html
@@ -45,5 +45,7 @@
 <script src="app.js"></script>
 <script src="storyboard/Storyboard.js"></script>
 <script src="storyboard/controller/StoryboardCtrl.js"></script>
+<script src="common/Common.js"></script>
+<script src="storyboard/services/StorieService.js"></script>
 </body>
 </html>
