--- a/app/storyboard/tpl/storyboard.html
+++ b/app/storyboard/tpl/storyboard.html
@@ -62,7 +62,7 @@
                         name="type"
                         class="form-control"
                         ng-model="storyboard.editedStory.type"
-                        ng-options="story.name as story.name for story in storyboard.types"
+                        ng-options="type.name as type.name for type in storyboard.types"
                         ng-required="true">
                     <option value="">Wybierz typ</option>
                 </select>
