added 'backend' services

--- a/app/index.html
+++ b/app/index.html
@@ -47,5 +47,6 @@
 <script src="storyboard/controller/StoryboardCtrl.js"></script>
 <script src="common/Common.js"></script>
 <script src="storyboard/services/StorieService.js"></script>
+<script src="storyboard/services/EndpointService.js"></script>
 </body>
 </html>
