--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
 <script src="storyboard/Storyboard.js"></script>
 <script src="storyboard/controller/StoryboardCtrl.js"></script>
 <script src="common/Common.js"></script>
+<script src="common/DragAndDropDirective.js"></script>
 <script src="storyboard/services/StorieService.js"></script>
 <script src="storyboard/services/EndpointService.js"></script>
 </body>
