--- a/app/storyboard/tpl/storyboard.html
+++ b/app/storyboard/tpl/storyboard.html
@@ -5,28 +5,9 @@
             <h3 class="status">{{ status.name }}</h3>
             <hr/>
 
-            <li class="story"
-                drag-container="story" mime-type="application/x-story-status"
-                drop-container="" accepts="['application/x-story-status']"
-                ng-repeat="story in storyboard.stories | filter: {status: status.name}"
+            <li ng-repeat="story in storyboard.stories | filter: {status: status.name}"
                 ng-click="storyboard.selectStory(story)"
-                active>
-                <div drop-target="top"
-                     on-drag-enter="storyboard.insertStory(story, data, true)"
-                     on-drop="soryboard.finalizeDrop(drop)" />
-                <div drop-target="bottom"
-                     on-drag-enter="storyboard.insertStory(story, data, false)"
-                     on-drop="soryboard.finalizeDrop(drop)" />
-                <article>
-                    <div>
-                        <button type="button" class="close" ng-click="storyboard.deleteStory(story.id)">x</button>
-                        <p class="title">{{ story.title }}</p>
-                    </div>
-                    <div class="type-bar {{ story.type }}"></div>
-                    <div>
-                        <p>{{ story.description }}</p>
-                    </div>
-                </article>
+                story>
             </li>
             <li class="emptystatus"
                 drop-container=""
