--- a/app/storyboard/tpl/story.html
+++ b/app/storyboard/tpl/story.html
@@ -4,20 +4,23 @@
      drop-container=""
      accepts="['application/x-story-status']"
      active>
-<div drop-target="top"
-     on-drag-enter="storyboard.insertStory(story, data, true)"
-     on-drop="soryboard.finalizeDrop(drop)"/>
-<div drop-target="bottom"
-     on-drag-enter="storyboard.insertStory(story, data, false)"
-     on-drop="soryboard.finalizeDrop(drop)"/>
-<article>
-    <div>
-        <button type="button" class="close" ng-click="storyboard.deleteStory(story.id)">x</button>
-        <p class="title">{{ story.title }}</p>
-    </div>
-    <div class="type-bar {{ story.type }}"></div>
-    <div>
-        <p>{{ story.description }}</p>
-    </div>
-</article>
+
+    <div drop-target="top"
+         on-drag-enter="storyboard.insertStory(story, data, true)"
+         on-drop="soryboard.finalizeDrop(drop)"></div>
+    <div drop-target="bottom"
+         on-drag-enter="storyboard.insertStory(story, data, false)"
+         on-drop="soryboard.finalizeDrop(drop)"></div>
+
+    <article>
+        <div>
+            <button type="button" class="close" ng-click="storyboard.deleteStory(story.id)">x</button>
+            <p class="title">{{ story.title }}</p>
+        </div>
+        <div class="type-bar {{ story.type }}"></div>
+        <div>
+            <p>{{ story.description }}</p>
+        </div>
+    </article>
+
 </div>
