--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
 <script src="common/directives/ActiveDirective.js"></script>
 <script src="storyboard/services/StorieService.js"></script>
 <script src="storyboard/directive/StoryDirective.js"></script>
+<script src="storyboard/directive/DetailsFormDirective.js"></script>
 <script src="storyboard/services/EndpointService.js"></script>
 </body>
 </html>
