--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-drag-drop/build/angular-drag-drop.js"></script>
 <script src="app.js"></script>
 <script src="storyboard/Storyboard.js"></script>
