--- a/app/storyboard/tpl/detailsForm.html
+++ b/app/storyboard/tpl/detailsForm.html
@@ -1,4 +1,4 @@
-<form name="storyboard.detailsForm" novalidate>
+<form name="detailsForm" novalidate>
 
     <div class="form-group">
         <div class="controls">
@@ -13,7 +13,8 @@
                    ng-minlength="5"
                    ng-maxlength="10"/>
 
-            <div ng-messages="storyboard.detailsForm.title.$error">
+            <div ng-messages="detailsForm.title.$error"
+                 ng-show="detailsForm.title.$dirty">
                 <div ng-message="required">
                     Pole jest wymagane
                 </div>
@@ -24,7 +25,7 @@
                     Pole jest za długie
                 </div>
             </div>
-            
+
         </div>
     </div>
 
@@ -105,7 +106,7 @@
         </button>
         <button class="btn btn-sm"
                 ng-show="storyboard.editedStory.id"
-                ng-disabled="!storyboard.detailsForm.$valid"
+                ng-disabled="!detailsForm.$valid"
                 ng-click="storyboard.updateStory()">Update
         </button>
         <button class="btn btn-sm"
