--- a/app/index.html
+++ b/app/index.html
@@ -45,8 +45,12 @@
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-drag-drop/build/angular-drag-drop.js"></script>
+<script src="users/Users.js"></script>
+<script src="users/controller/UsersCtrl.js"></script>
 
 <script src="app.js"></script>
+
+
 <script src="common/Common.js"></script>
 <script src="common/animations/SlideAnimation.js"></script>
 <script src="common/directives/ActiveDirective.js"></script>
