--- a/app/users/tpl/users.html
+++ b/app/users/tpl/users.html
@@ -1,7 +1,24 @@
-<h1>AKASKDJHASKDJHASD </h1>
-<h1>AKASKDJHASKDJHASD </h1>
-<h1>AKASKDJHASKDJHASD </h1>
-<h1>AKASKDJHASKDJHASD </h1>
-<h1>AKASKDJHASKDJHASD </h1>
-<h1>AKASKDJHASKDJHASD </h1>
-<h1>AKASKDJHASKDJHASD </h1>
+<br/>
+<br/>
+<br/>
+<div class="container" style="color: #fff;">
+    <div class="list-area">
+        <div class="list-wrapper">
+            <ul class="list">
+                <li ng-repeat="user in users.users">
+                    <hr/>
+                    <article>
+                        <div class="photo pull-left">
+                            <span class="glyphicon glyphicon-user"></span>&nbsp;
+                        </div>
+                        <div>
+                            Name: {{user.firstName}}<br/>
+                            Surname: {{user.lastName}}<br/>
+                            email: {{user.email}}<br/>
+                        </div>
+                    </article>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
