--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
 <script src="users/Users.js"></script>
 <script src="users/controller/UsersCtrl.js"></script>
 <script src="users/services/UserService.js"></script>
+<script src="users/directive/UsersFormDirective.js"></script>
 
 
 </body>
